# nirs4all-lite

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSING.md  LICENSING_FR.md  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release-crates.yml  release-matlab.yml  release-npm.yml  release-python.yml  release-r.yml  release-source.yml  release.yml  version-guard.yml
LICENSES/: COMMERCIAL-LICENSE.md  COMMERCIAL-LICENSE_FR.md
bindings/matlab/: README.md
bindings/matlab/+nirs4all/: runPortablePipeline.m  upstreams.m
bindings/matlab/tests/: parity.m  smoke.m
bindings/python/: README.md  pyproject.toml
bindings/python/src/n4a/: __init__.py
bindings/python/src/nirs4all_core/: __init__.py
bindings/python/src/nirs4all_lite/: __init__.py  _execution.py  _pipeline.py  _topology.py  _upstreams.py
bindings/python/tests/: test_capability_matrix.py  test_execution_parity.py  test_facade.py  test_pipeline_contract.py  test_release_topology.py  test_upstreams.py
bindings/r/: .Rbuildignore  DESCRIPTION  LICENSE  README.md  cran-comments.md
bindings/r/R/: execution.R  upstreams.R
bindings/r/man/: domain_accessors.Rd  nirs4all-package.Rd  nirs4all_require.Rd  nirs4all_upstreams.Rd
bindings/r/tests/: pipeline.R  surface.R  upstreams.R
bindings/rust/: README.md
bindings/rust/nirs4all/: Cargo.toml  README.md
bindings/rust/nirs4all/src/: lib.rs
bindings/wasm/: README.md  package-lock.json  package.json
bindings/wasm/src/: execution.js  index.js
bindings/wasm/tests/: execution.test.js  index.test.js  methods-artifact.js  parity.test.js
compat/: capabilities.toml  upstreams.toml
docs/: BINDINGS.md  CAPABILITIES.md  CORE_RENAME.md  NAMING.md  OPERATORS.md  PARITY.md  PUBLISHING.md  RELEASE.md  conf.py  getting_started.md  index.md  installation.md  requirements.txt
docs/maintenance/: final_report.md  quality_gates.md  release_checklist.md  repository_audit.md
docs/maintenance/codex_reviews/: 03_main_diff_review.md  04_final_release_readiness_review.md
scripts/: build-matlab-package.sh  bump_version.sh  release_guard.py
scripts/parity/: generate_python_oracle.py
tests/parity/: README.md
tests/parity/expected/: portable_python_oracle.json
tests/parity/fixtures/: portable_methods_pipeline.json  portable_methods_pipeline.yaml
