[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nirs4all-core"
version = "0.2.4"
description = "Portable nirs4all aggregate binding over formats, IO, methods, dag-ml, and dag-ml-data (datasets optional)"
readme = "README.md"
requires-python = ">=3.11"
license = "CeCILL-2.1 OR AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "nirs4all contributors" }]
keywords = ["nirs", "spectroscopy", "chemometrics", "wasm", "bindings"]
# License is declared via the SPDX `license` expression above (PEP 639);
# no license trove classifier is listed to avoid contradicting it.
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = ["PyYAML>=6"]

[project.optional-dependencies]
dag-ml = ["dag-ml>=0.2.2"]
dag-ml-data = ["dag-ml-data>=0.2.3"]
formats = ["nirs4all-formats>=0.2.2"]
io = ["nirs4all-io>=0.1.6"]
# nirs4all-datasets is kept EXTERNAL/OPTIONAL (to avoid bloat): it is its own
# extra and is intentionally NOT part of the bundled `all` aggregate below.
datasets = ["nirs4all-datasets>=0.3.3"]
methods = ["nirs4all-methods>=1.0.2", "scikit-learn>=1.3"]
# The bundled aggregate = methods + formats + io (+ dag-ml / dag-ml-data).
# Datasets is deliberately excluded; install nirs4all-core[datasets] (or
# [everything]) to opt in.
all = [
    "dag-ml>=0.2.2",
    "dag-ml-data>=0.2.3",
    "nirs4all-formats>=0.2.2",
    "nirs4all-io>=0.1.6",
    "nirs4all-methods>=1.0.2",
    "scikit-learn>=1.3",
]
everything = ["nirs4all-core[all,datasets]"]

[project.urls]
Homepage = "https://nirs4all.org"
Repository = "https://github.com/GBeurier/nirs4all-core"
Issues = "https://github.com/GBeurier/nirs4all-core/issues"

# The wheel ships the canonical aggregate package (`nirs4all_lite`, kept as the
# stable legacy import root) plus two additive, non-shadowing import facades
# (LOCK-GOV): the brand-aligned `n4a` root and the `nirs4all_core` alias that
# matches the `nirs4all-core` distribution name (RC V1 rename from
# `nirs4all-lite`). Both only re-export `nirs4all_lite`.
[tool.hatch.build.targets.wheel]
packages = ["src/nirs4all_lite", "src/n4a", "src/nirs4all_core"]
