[package]
name = "nirs4all"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Portable nirs4all aggregate binding over formats, IO, datasets, methods, dag-ml, and dag-ml-data"
readme = "README.md"
keywords = ["nirs", "spectroscopy", "chemometrics", "bindings"]
include = ["Cargo.toml", "README.md", "src/**/*.rs"]

[lib]
path = "src/lib.rs"

[dependencies]
serde_json = "1"
serde_yaml = "0.9"
